--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ dash-table==5.0.0
 dnspython==2.1.0
 Flask==2.0.2
 Flask-Compress==1.10.1
+gunicorn==20.1.0
 html5lib==1.1
 idna==3.3
 itsdangerous==2.0.1
