--- a/requirements.txt
+++ b/requirements.txt
@@ -41,7 +41,7 @@ requests-toolbelt==0.9.1
 six==1.16.0
 soupsieve==2.2.1
 ta==0.7.0
-#TA-Lib==0.4.21
+TA-Lib==0.4.21
 ta-py==1.1.10
 tenacity==8.0.1
 tomli==1.2.2
