--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,42 @@
+async-generator==1.10
+attrs==21.2.0
 autopep8==1.6.0
 black==21.10b0
+blinker==1.4
+Brotli==1.0.9
 certifi==2021.10.8
+cffi==1.15.0
 click==8.0.3
+cryptography==36.0.1
 dnspython==2.1.0
+h11==0.12.0
+h2==4.1.0
+hpack==4.0.0
+hyperframe==6.0.1
+idna==3.3
+kaitaistruct==0.9
 mypy-extensions==0.4.3
+outcome==1.1.0
 pathspec==0.9.0
 platformdirs==2.4.0
+pyasn1==0.4.8
 pycodestyle==2.8.0
+pycparser==2.21
 pymongo==3.12.1
+pyOpenSSL==21.0.0
+pyparsing==3.0.6
+PySocks==1.7.1
 regex==2021.11.2
+selenium==4.1.0
+selenium-wire==4.5.6
+six==1.16.0
+sniffio==1.2.0
+sortedcontainers==2.4.0
 toml==0.10.2
 tomli==1.2.2
+trio==0.19.0
+trio-websocket==0.9.2
 typing-extensions==3.10.0.2
+urllib3==1.26.7
+wsproto==1.0.0
+zstandard==0.16.0
